# lib/api-spec/openapi.yaml
@@ -1181,6 +1181,9 @@ components:
           type: string
         name:
           type: string
+        phone:
+          type: string
+          nullable: true
         role:
           type: string
           enum: [superadmin, head_office_admin, editor, branch_head, hunter]
@@ -1196,6 +1199,9 @@ components:
       properties:
         name:
           type: string
+        phone:
+          type: string
+          nullable: true
         role:
           type: string
           enum: [superadmin, head_office_admin, editor, branch_head, hunter]
